<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="weather"
            type="com.yathams.weather.dao.WeatherResponse" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context="com.yathams.weather.WeatherMainActivity">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/city_name"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/search"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text='@{weather.name+", "+weather.sys.country}'
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

        <TextView
            android:id="@+id/textViewTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@{weather.main.formatTemp}"
            android:textSize="96sp"
            android:typeface="normal"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imageViewIcon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDateTime" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_thin"
            android:text="o"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textViewTemperature"
            app:layout_constraintTop_toTopOf="@+id/textViewTemperature" />

        <TextView
            android:id="@+id/textViewDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.getDate()}"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCityName" />

        <ImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintBottom_toTopOf="@+id/textViewTemperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textViewTemperature"
            app:layout_constraintStart_toEndOf="@+id/textViewTemperature"
            app:layout_constraintTop_toBottomOf="@+id/textViewTemperature"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/textViewWeatherStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.weather.get(0).main}"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewIcon"
            app:layout_constraintEnd_toStartOf="@+id/imageViewIcon"
            app:layout_constraintStart_toEndOf="@+id/imageViewIcon" />

        <TextView
            android:id="@+id/textViewWindLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            app:layout_constraintBottom_toTopOf="@+id/textViewWind"
            app:layout_constraintEnd_toStartOf="@+id/textViewWind"
            app:layout_constraintStart_toEndOf="@+id/textViewWind" />

        <TextView
            android:id="@+id/textViewWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_thin"
            android:text='@{weather.wind.speed +" m/s"}'
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWeatherStatus" />

        <TextView
            android:id="@+id/textViewPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_thin"
            android:text='@{weather.main.pressure+" hpa"}'
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWeatherStatus" />

        <TextView
            android:id="@+id/textViewPressureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            app:layout_constraintBottom_toTopOf="@+id/textViewPressure"
            app:layout_constraintEnd_toStartOf="@+id/textViewPressure"
            app:layout_constraintStart_toEndOf="@+id/textViewPressure" />

        <TextView
            android:id="@+id/textViewHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@{weather.main.humidity+'%'}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWeatherStatus" />

        <TextView
            android:id="@+id/textViewHumidityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            app:layout_constraintBottom_toTopOf="@+id/textViewHumidity"
            app:layout_constraintEnd_toStartOf="@+id/textViewHumidity"
            app:layout_constraintStart_toEndOf="@+id/textViewHumidity" />

        <ImageView
            android:id="@+id/imageViewTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/high_and_low_temperatures"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWind"
            app:srcCompat="@drawable/temp_icon" />

        <TextView
            android:id="@+id/textViewTempHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@{weather.main.temp_max}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageViewTemp"
            app:layout_constraintTop_toTopOf="@+id/imageViewTemp" />

        <TextView
            android:id="@+id/textViewTempLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@{weather.main.temp_min}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewTemp"
            app:layout_constraintStart_toEndOf="@+id/imageViewTemp" />

        <ImageView
            android:id="@+id/imageViewSunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/sunrise_time"
            app:layout_constraintBottom_toTopOf="@+id/imageViewSunset"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPressure"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/sunrise" />

        <ImageView
            android:id="@+id/imageViewSunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/sunset_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSunrise"
            app:srcCompat="@drawable/sunset" />

        <TextView
            android:id="@+id/textViewSunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@{weather.sys.getSunriseTime()}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageViewSunrise"
            app:layout_constraintEnd_toStartOf="@+id/imageViewSunrise"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSunrise" />

        <TextView
            android:id="@+id/textViewSunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@{weather.sys.getSunsetTime()}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageViewSunset"
            app:layout_constraintEnd_toStartOf="@+id/imageViewSunrise"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSunset" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/progressContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSearch">

            <TextView
                android:id="@+id/textViewErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/error_message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

</layout>